# tql

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  README.md  __init__.py  kurasta.py  pyproject.toml  requirements.txt  setup.py  tox.ini  tql.py
TOI/: mbf_tql.py  tql_toi.batch
TOI_releases/: TIC114018671_TOI1011.01_s7_lc_flat_lc.txt  TIC114018671_TOI1011.01_s7_lc_fold_lc.txt  TIC143257766_TOI1120_s13_lc_flat_lc.txt  TIC143257766_TOI1120_s13_lc_fold_lc.txt  TIC229384040_TOI897.01_s6_lc_flat_lc.txt  TIC229384040_TOI897.01_s6_lc_fold_lc.txt  TIC257605131_TOI451.01_s4_lc_flat_sc.txt  TIC257605131_TOI451.01_s4_lc_fold_sc.txt  TIC257605131_TOI451.01_s5_lc_flat_sc.txt  TIC257605131_TOI451.01_s5_lc_fold_sc.txt  TIC269450900_TOI1127_s13_lc_flat_sc.txt  TIC269450900_TOI1127_s13_lc_fold_sc.txt  TIC271581073_TOI1101_s13_lc_flat_lc.txt  TIC271581073_TOI1101_s13_lc_fold_lc.txt  TIC274151135_TOI1105_s12_lc_flat_lc.txt  TIC274151135_TOI1105_s12_lc_fold_lc.txt  TIC290348383_TOI1099_s13_lc_flat_lc.txt  TIC290348383_TOI1099_s13_lc_flat_sc.txt  TIC290348383_TOI1099_s13_lc_fold_lc.txt  TIC290348383_TOI1099_s13_lc_fold_sc.txt  TIC295541511_TOI1117_s13_lc_flat_lc.txt  TIC295541511_TOI1117_s13_lc_fold_lc.txt  TIC295599256_TOI1108_s13_lc_flat_lc.txt  TIC295599256_TOI1108_s13_lc_fold_lc.txt  TIC304100538_TOI1116_s1_lc_flat_lc.txt  TIC304100538_TOI1116_s1_lc_flat_sc.txt  TIC304100538_TOI1116_s1_lc_fold_lc.txt  TIC304100538_TOI1116_s1_lc_fold_sc.txt  TIC311890977_TOI1102_s12_lc_flat_lc.txt  TIC311890977_TOI1102_s12_lc_fold_lc.txt  (+36 more)
data/: TOIs.csv  (+2 more)
scripts/: kql  (+15 more)
(+84 files in other folders)
